--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
       </div>
       <div class="card-bottom">
         <div class="stats">
-          <span class="stats-value">80K</span>
-          <span class="stats-name">Followers</span>
+          <div class="stats-value">80K</div>
+          <div class="stats-name">Followers</div>
         </div>
         <div class="stats">
-          <span class="stats-value">803K</span>
-          <span class="stats-name">Likes</span>
+          <div class="stats-value">803K</div>
+          <div class="stats-name">Likes</div>
         </div>
         <div class="stats">
-          <span class="stats-value">1.4K</span>
-          <span class="stats-name">Photos</span>
+          <div class="stats-value">1.4K</div>
+          <div class="stats-name">Photos</div>
         </div>
       </div>
     </div>
