--- a/index.html
+++ b/index.html
@@ -46,9 +46,13 @@
     </div>
     <div class="attribution">
       Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">
+      <a
+        href="https://www.frontendmentor.io/challenges/profile-card-component-cfArpWshJ"
+        target="_blank"
+      >
         Frontend Mentor </a
-      >. Coded by <a href="#">Muchammad Indra</a>.
+      >. Coded by
+      <a href="https://github.com/muchammadindra97">Muchammad Indra</a>.
     </div>
   </body>
 </html>
